# vexfatbd

./: Cargo.toml  README.md
src/: boot_region.rs  data_region.rs  fat_region.rs  heap.rs  lib.rs  utils.rs
src/data_region/: allocation_bitmap.rs  file.rs  mod.rs  upcase_table.rs  volume_label.rs
