# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "vexfat"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "^1.13.1", features = ["derive", "min_const_generics"] }
rand = "^0.8.5"
bitbybit = "^1.1.3"
arbitrary-int = "^1.2.3"
num-traits = "^0.2.15"
itertools = "^0.10.5"
static_assertions = "^1.1.0"
